--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .heading{
     text-align: center;
-background-color: black;
+background-color: #121212;
 color: white;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-style: italic;
