--- a/src/Card.css
+++ b/src/Card.css
@@ -1,8 +1,15 @@
 .card{
 border-radius: 10px;
 background-color: burlywood;
+
+
 }
 .card:hover{
-    box-shadow: 5px 10px #f50a0a;
+    box-shadow: 5px 10px 20px #42b960;
     cursor: pointer;
+   animation: flip;
+   animation-duration: 2s;
+   z-index: 25;
+   animation-iteration-count: 2;
+
 }
