--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -10,12 +10,15 @@ ul{
 
 li {
     list-style-type: none;
+    text-decoration: none;
+    font-size: x-large;
+    text-transform: capitalize;
 }
 
 
 li a{
     float: left;
-    
+    text-decoration: none;
     margin: 10px;
     color: white;
     
