--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,43 @@ font-style: italic;
 .animate_animated.animate__flash{
     opacity: 0.5;
 }
+.instalink{
+    text-decoration: none;
+  color: rgb(209, 12, 209);
+}
+.instalink:hover{
+    font-size: 30px;
+    color: springgreen;
+}
+#search1{
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+#search{
+    text-align: center;
+    height: 40px;
+    border-radius: 20px;
+    width: 60%;
+}
+#search:focus-visible {
+    outline-offset: 0px;
+    outline-style: none;
+    border-color: black;
+}
+
+
+
+#search::placeholder{
+    text-align: center;
+    font-size: 20px;
+}
+.material-icons{
+    font-size: 38px;
+    margin-left: 10px;
+    margin-top: 2px;
+    color: white;
+    
+}
