--- a/src/LoginCard.css
+++ b/src/LoginCard.css
@@ -3,24 +3,47 @@
     font-size: 2rem;
     align-items: center;
     text-align: center;
+    margin-top: 20px;
 }
 .Log{
-    padding-top: 80px;
+    /* padding-top: 80px; */
     display: flex;
     flex-direction: column;
     gap: 20px;
+  margin-top:15vh;
+  /* border-radius: 20px; */
+  position: relative;
+  /* background-color: black; */
+  background-color: white;
+  width: 100vw;
+  align-self: center;
+    justify-content: center;
+}
 
+.LogContainer{
+    /* display: flex;
+    flex-direction: column; */
+    /* gap: 20px; */
+    border-radius: 50px;
+    width:70vw;
+    align-self: center;
+    text-align: center;
+    justify-content: center;
+    background-color:black;
+    min-height: 50vh;
+box-shadow: 20px 20px 20px burlywood;
 }
 input{
     border-radius: 10px;
-    width: 80vw;
+    width: 68vw;
     align-self: center;
     height: 6vh;
+    margin-top: 20px;
 }
 .but{
     margin-top: 40px;
     border-radius: 10px;
-    width: 80vw;
+    width: 68vw;
     align-self: center;
     font-size: 1.5rem;
     background-color: blanchedalmond;
@@ -30,5 +53,5 @@ input{
     background-color: burlywood;
 }
 html{
-    background-color: #121212;
+    
 }
