--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,7 @@
 
 
 ul{
-    background-color: #3d3c3c; 
+    background-color: "black"; 
     
     height: 50px;
 }
@@ -33,17 +33,18 @@ ul:hover{
     
  }
  @keyframes run {
-     0%{
-          background-color: black ;
-          
-          width: 100%;
+     0%{background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+        /* background-image: linear-gradient(to right, rgb(179, 131, 164) , rgb(77, 26, 74)); */
+          /* background-color: black ;
+          */
+          width: 50%; 
      }
 25%{
  background-color:#909090;
  width: 100%;
 }
 50%{
- background-color: black;
+    background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
  width: 100%;
 }
 75%{
@@ -51,7 +52,7 @@ ul:hover{
  width: 100%;
 }
 100%{
- background-color: black;
+    background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
  width: 100%;
 }
  }
