--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ background-color: #121212;
 color: white;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-style: italic;
-
+padding-top: 30px;
 
 
 
