--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -8,6 +8,7 @@ ul{
     display: flex;
     justify-content: center;
     margin-top: 30px;
+    padding-left: 0px;
 }
 
 
@@ -24,7 +25,7 @@ li {
 li a{
     /* float: left; */
     text-decoration: none;
-    margin: 10px;
+    padding: 10px;
     color: white;
     text-align: center;
 }
@@ -32,8 +33,8 @@ li a:hover{
     color: white;
     border-left:2px solid red;
     border-right:2px solid red;
-    border-top: 2px solid yellow;
-    border-bottom: yellow;
+    border-top: 2px solid red;
+
     border-radius: 9px;
 }
 
