--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,9 @@ body {
 .MuiSvgIcon-root:hover{
   color: red;
 }
+
+@media only screen and (max-width:700px){
+.micinvisible{
+display:"hidden"
+
+}}
