--- a/src/App.css
+++ b/src/App.css
@@ -116,3 +116,11 @@ min-height: 70px;
     
     }}
 
+    .chipdesign{
+        font-size: 25px !important;
+        cursor: pointer;
+    }
+    .chipdesign:hover{
+        background-color: white;
+        color: rgb(137, 138, 138);
+    }
