--- a/src/Play.css
+++ b/src/Play.css
@@ -1,12 +1,13 @@
 .play{
     margin-top: 10px;
    padding-bottom: 10px;
-    display: flex;
+    /* display: flex; */
     gap:20px;
     flex-wrap: wrap;
     align-items: center;
     text-align: center;
 justify-content: center;
+min-height: 40vh;
 }
 .play> * {
     border: 1px solid plum;
@@ -15,3 +16,5 @@ justify-content: center;
 .play > * :hover{
     box-shadow: 2px 4px 6px purple;
 }
+
+  
