--- a/src/Play.css
+++ b/src/Play.css
@@ -1,20 +1,19 @@
-.play{
-    margin-top: 10px;
-   padding-bottom: 10px;
-    /* display: flex; */
-    gap:20px;
-    flex-wrap: wrap;
-    align-items: center;
-    text-align: center;
-justify-content: center;
-min-height: 40vh;
+.play {
+  margin-top: 40px;
+  padding-bottom: 10px;
+  /* display: flex; */
+  gap: 20px;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  min-height: 60vh;
+  /* background-color: aqua !important; */
 }
-.play> * {
-    border: 1px solid plum;
-    border-radius: 3px;
+.play > * {
+  /* border: 1px solid plum; */
+  border-radius: 3px;
 }
-.play > * :hover{
-    box-shadow: 2px 4px 6px purple;
-}
-
-  
+/* .play +div :hover {
+  box-shadow: 2px 4px 6px red;
+} */
