--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ min-height: 70px;
         text-decoration: none;
    
    
-    font-family: cursive;
+    font-family: 'Cookie', cursive;
     
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
 
@@ -49,7 +49,7 @@ min-height: 70px;
  animation: pulse;
  animation-iteration-count: infinite;
     animation-duration: 2s;
-   font-size: 40px;
+   font-size: 50px;
 }
 
 .namee__word:hover{
