--- a/src/Play.css
+++ b/src/Play.css
@@ -1,7 +1,7 @@
 .play {
   margin-top: 40px;
   padding-bottom: 10px;
-  /* display: flex; */
+  display: flex;
   gap: 20px;
   flex-wrap: wrap;
   align-items: center;
@@ -14,6 +14,6 @@
   /* border: 1px solid plum; */
   border-radius: 3px;
 }
-/* .play +div :hover {
+.play :hover {
   box-shadow: 2px 4px 6px red;
-} */
+}
